Day3/17_ingress/traefik.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: ingress-internal
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: marcin-kubernetes
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: traefik
          servicePort: 8080
